[gd_scene load_steps=6 format=2]

[ext_resource path="res://Flipper.gd" type="Script" id=1]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.629
height = 45.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.36335
height = 45.0

[sub_resource type="StreamTexture" id=3]
load_path = "res://.import/flipper-attempt.png-738274c499f0c8a1fec9c3250be62fb3.stex"

[sub_resource type="StreamTexture" id=4]
load_path = "res://.import/flipper-attempt.png-738274c499f0c8a1fec9c3250be62fb3.stex"

[node name="Flipper" type="Node2D"]
rotation = 0.305433
script = ExtResource( 1 )

[node name="RightArea" type="KinematicBody2D" parent="."]
collision/safe_margin = 60.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightArea"]
position = Vector2( -18.864, 2.05265 )
rotation = 1.55334
shape = SubResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RightArea"]
position = Vector2( 0.0587807, 0.971146 )
polygon = PoolVector2Array( 2.23586, -8.02059, -44.5668, -7.21057, -47.7571, -6.10697, -49.8684, -3.77208, -50.2176, -0.519917, -49.8572, 2.80305, -48.3696, 5.73298, -45.4279, 9.11351, -41.8111, 12.1192, -33.5776, 16.7964, -18.799, 21.6587, -3.75425, 22.0871, 8.22457, 21.2041, 10.1734, 11.4719, 9.12608, -1.77007, 8.22397, -4.63122, 6.66884, -6.23795 )
disabled = true

[node name="LeftArea" type="KinematicBody2D" parent="."]
collision/safe_margin = 60.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArea"]
position = Vector2( 19.2298, 1.6676 )
rotation = 1.58825
shape = SubResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LeftArea"]
position = Vector2( -0.018261, 1.11915 )
polygon = PoolVector2Array( -5.90155, -6.59234, -1.77941, -7.97562, 44.9705, -7.79766, 47.3091, -7.05052, 49.6187, -4.01441, 50.7732, -0.352696, 50.1842, 3.07325, 47.9284, 6.20287, 44.3605, 8.807, 36.4396, 13.2562, 26.9195, 17.1643, 14.5935, 20.3701, 1.07701, 21.6651, -4.68952, 21.853, -8.47825, 11.3314, -9.87121, 4.09605, -9.76802, -2.22766, -8.462, -4.73651 )
disabled = true

[node name="RightSprite" type="Sprite" parent="."]
position = Vector2( -19.318, 2.45179 )
texture = SubResource( 3 )

[node name="LeftSprite" type="Sprite" parent="."]
position = Vector2( 19.5844, 2.09734 )
texture = SubResource( 4 )
flip_h = true

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
